changes for PFnodetool

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
 </head>
 	<body>
 	    Pathfinder Init Tool <a href="/init.html">Init Tool</a><br/>
-	    Pathfinder Spell List <a href="/spells.html">Spells </a><br/>
+		Pathfinder Spell List <a href="/spells.html">Spells </a><br/>
+		Pathfinder Feat List <a href="/feats.html">Feats </a><br/>
+		Pathfinder Magic Item List <a href="/magicitems.html">Magic Items </a><br/>
 	</body>
 
 </html>
