updates to tool

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,58 @@
 <html>
 <head>
-    <title>Welcome to the Pathfinder Tool Set</title>
+	<title>Welcome to the Pathfinder Tool Set</title>
+	<script src="./js/jquery-3.2.1.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="./css/app.css">
+	 <link rel="stylesheet" type="text/css" href="./css/foundation.css">
 </head>
 	<body>
-	    Pathfinder Init Tool <a href="/init.html">Init Tool</a><br/>
-		Pathfinder Spell List <a href="/spells.html">Spells </a><br/>
-		Pathfinder Feat List <a href="/feats.html">Feats </a><br/>
-		Pathfinder Magic Item List <a href="/magicitems.html">Magic Items </a><br/>
+		<div class="row">
+			<div class="column medium-12" style="text-align:center">
+				<img src="images/PathfinderRPGLogo_500.jpeg">
+			</div>
+		</div>
+		<div class="row">
+			<div class="column medium-12" style="text-align:center">
+					<a class="button" href="/init.html">Init Tool</a><br/>
+			</div>
+		</div>
+		<div class="row">
+			<div class="column medium-12" style="text-align:center">
+				<a class="button" href="/spells.html">Spells</a><br/>
+			</div>
+		</div>
+		<div class="row">
+			<div class="column medium-12" style="text-align:center">
+				<a class="button" href="/feats.html">Feats</a><br/>
+			</div>
+		</div>
+		<div class="row">
+			<div class="column medium-12" style="text-align:center">
+				<a class="button" href="/magicitems.html">Magic item Tool</a><br/>
+			</div>
+		</div>
+		<div class="row">
+			<div class="column medium-12" style="text-align:center">
+				<a class="button" href="/monsters.html">Monster Tool</a><br/>
+			</div>
+		</div>
+		<div class="row">
+			<div class="column medium-12" style="text-align:center">
+				<a class="button" href="/skills.html">Skill Tool</a><br/>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="column medium-12" style="text-align:center">
+				<a class="button" href="/umr.html">Universal Monster Rules</a><br/>
+			</div>
+		</div>
+		<div>
+			Section 15: Copyright Notice See this <a href="/ogl.html">page</a> for more information on copyright, and ogl compliance
+		</div> 
+
+		<script src="./js/what-input.js"></script>
+		<script src="./js/foundation.js"></script>
 	</body>
 
 </html>
